Initialized Account Handler

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html class="h-screen w-full bg-white">
   <head>
-    <title>SenseTask</title>
+    <title>Sense Task</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main class="flex flex-col mx-auto mt-28 bg-white">
+      <%= render "layouts/navbar" %>
+          <% if notice %>
+            <p class="alert alert-success notices bg-green-100"><%= notice %></p>
+          <% end %>
+          <% if alert %>
+            <p class="alert alert-danger notices bg-red-100"><%= alert %></p>
+          <% end %>
       <%= yield %>
     </main>
   </body>
