Add styling to deivse views

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,6 @@
 <h1 class="text-center text-3xl">HOME PAGE</h>
+
+
+<%= link_to new_category_path do %>
+  <i class="fa-solid fa-circle-plus fa-beat absolute right-24 bottom-24 text-black text-5xl "></i>
+<% end %>
