--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Category</h1>
+<div class="mx-auto md:w-full w-full">
+    <h1 class="font-bold text-4xl text-center">New Category</h1>
 
-<%= render 'form', category: @category %>
-
-<%= link_to 'Back', categories_path %>
+    <%= render 'form', category: @category %>
+</div>
