Added layout to homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,25 @@
 <h1 class="text-center text-3xl">HOME PAGE</h>
 
+<div class="text-left ml-10">
+  <div class="home-div" >
+    <label>Overdue</label>
+    <span></span>
+  </div>
+  <div class="home-div">
+    <label>Today</label>
+    <span></span>
+  </div>
+  <div class="home-div">
+    <label>Tomorrow</label>
+    <span></span>
+  </div>
+  <div class="home-div">
+    <label>No Date</label>
+    <span></span>
+  </div>
+</div>
+
 
 <%= link_to new_category_path do %>
-  <i class="fa-solid fa-circle-plus fa-beat absolute right-24 bottom-24 text-black text-5xl "></i>
+  <i class="fa-solid fa-circle-plus fa-beat absolute right-36 bottom-28 text-black text-6xl "></i>
 <% end %>
