--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,8 +5,10 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Categories</h1>
-    <%= link_to 'Category', new_category_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
+  <%= link_to new_category_path do %>
+    <i class="fa-solid fa-circle-plus fa-beat absolute right-24 bottom-24 text-black text-5xl "></i>
+  <% end %>
 
   <div id="categories" class="min-w-full">
     <%= render @categories %>
