--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,7 +5,9 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Tasks</h1>
-    <%= link_to 'New task', new_task_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%= link_to new_task_path do %>
+      <i class="fa-solid fa-circle-plus fa-beat absolute right-36 bottom-28 text-black text-6xl "></i>
+    <% end %>
   </div>
 
   <div id="tasks" class="min-w-full">
