--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -6,7 +6,7 @@
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Categories</h1>
     <%= link_to new_category_path do %>
-      <i class="fa-solid fa-circle-plus fa-beat absolute right-36 bottom-28 text-black text-6xl "></i>
+      <i class="fa-solid fa-circle-plus fa-beat fixed right-36 bottom-28 text-black text-6xl "></i>
     <% end %>
   </div>
 
