--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<header class="w-full h-16 absolute top-0 left-0 bg-black">
+<header class="w-full h-16 fixed top-0 left-0 bg-black">
     <div class="flex flex-row w-full">
         <%= image_tag "sensetasklogo.png", class: "sensetask_logo h-14 m-auto ml-28"%>
         <nav class="flex justify-self-end items-center w-full h-16 justify-end">
