Added tasks sorting by category feat

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,16 +1,21 @@
 <div class="w-full">
-  <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
-  <% end %>
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Tasks</h1>
+    <h1 class="font-bold text-4xl pl-16">Tasks</h1>
     <%= link_to new_task_path do %>
-      <i class="fa-solid fa-circle-plus fa-beat fixed right-36 bottom-28 text-black text-6xl"></i>
+      <i class="fa-solid fa-circle-plus fa-beat fixed right-36 bottom-28 text-black text-6xl z-10"></i>
     <% end %>
   </div>
 
-  <div id="tasks" class="min-w-full">
+  <div id="tasks" class="min-w-full pl-16 pr-[450px]">
     <%= render @tasks %>
   </div>
+
+  <div class="fixed right-0 top-16 text-2xl text-blue-900 text-center flex flex-col border h-screen w-1/5 bg-neutral-100">
+    <%= link_to "All Tasks", tasks_path, class: "p-2" %>
+    <% @categories.each do |category| %>
+      <%= link_to category.title, tasks_path(:category_id => category.id), class: "p-2"%>
+    <% end %>
+  </div>
+
 </div>
