--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -21,7 +21,7 @@
 }
 
 .notices{
-  @apply absolute top-20 left-1/2 -translate-x-1/2 text-center border border-black rounded-lg w-3/12 h-max p-4 text-xl;
+  @apply fixed top-20 left-1/2 -translate-x-1/2 text-center border border-black rounded-lg w-3/12 h-max p-4 text-xl;
 }
 
 .edit-form{
