--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,13 +4,13 @@
   <% end %>
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Categories</h1>
+    <h1 class="font-bold text-4xl pl-16">Categories</h1>
     <%= link_to new_category_path do %>
       <i class="fa-solid fa-circle-plus fa-beat fixed right-36 bottom-28 text-black text-6xl "></i>
     <% end %>
   </div>
 
-  <div id="categories" class="min-w-full">
+  <div id="categories" class="min-w-full pl-16 pr-16">
     <%= render @categories %>
   </div>
 </div>
