added functionality and styling to homepage

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,35 @@
  *= require_tree .
  *= require_self
  */
+ table {
+    width: 100%;
+  }
+  
+  table, td {
+    border-collapse: collapse;
+  }
+  
+  thead {
+    display: table; 
+    width: 100%; 
+  }
+  
+  tbody {
+    display: block; 
+    max-height: 258px; 
+    overflow-y: scroll; 
+  }
+  tbody::-webkit-scrollbar {
+    display: none;
+  }
+  th, td {
+    width: 35%; 
+    padding: 5px;
+    word-break: break-all; 
+  }
+  
+  tr {
+    display: table;
+    width: 100%;
+  }
+  
