--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -11,8 +11,14 @@
     <div class="inline-block ml-2">
       <%= button_to 'Destroy this task', task_path(@task), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
     </div>
-    <div class="inline-block ml-2">
-      <%= link_to 'Back to tasks', tasks_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    </div>
+    <% if request.path.start_with?('/show_task') %>
+      <div class="inline-block ml-2">
+        <%= link_to 'Back to home', root_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+      </div>
+    <% else %>
+      <div class="inline-block ml-2">
+        <%= link_to 'Back to tasks', tasks_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+      </div>
+    <% end %>
   </div>
 </div>
