--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -40,6 +40,10 @@
 }
 
 .home-div{
-  @apply my-9 p-2 border border-black h-32 w-8/12 rounded-lg;
+  @apply m-5 border h-90 w-5/12 rounded-lg flex flex-col drop-shadow-lg bg-white;
+}
+
+tbody{
+  @apply h-auto min-h-1/3;
 }
 
