added animation to icnos

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
       <strong class="text-red-900">
         Overdue 
       </strong>
-      <i class="fa-solid fa-calendar-xmark absolute right-10 top-2 text-red-700"></i>
+      <i class="fa-solid fa-calendar-xmark absolute right-10 top-2 text-red-700 animate-[wiggle_1s_ease-in-out_infinite]"></i>
     </label>
     <hr>
     <table class="text-xl table-fixed test">
@@ -53,7 +53,7 @@
         <span class=" text-xl p-2">
           <%= Date.today.to_s(:long)%>
         </span>
-      <i class="fa-solid fa-clipboard-list absolute right-10 top-2 text-green-700"></i>
+      <i class="fa-solid fa-clipboard-list absolute right-10 top-2 text-green-700 animate-bounce"></i>
      </label>
     <hr>
     <table class="text-xl table-fixed test">
@@ -93,7 +93,7 @@
       <strong class="text-pink-900">
         Completed
       </strong>
-      <i class="fa-solid fa-calendar-check absolute right-10 top-2 text-pink-700"></i>
+      <i class="fa-solid fa-calendar-check absolute right-10 top-2 text-pink-700 animate-pulse"></i>
     </label>
     <hr>
     <table class="text-xl table-fixed test">
@@ -133,7 +133,7 @@
         <strong class="text-slate-900">
           No Date
         </strong>
-      <i class="fa-solid fa-calendar-plus absolute right-10 top-2 text-slate-700"></i>
+      <i class="fa-solid fa-calendar-plus absolute right-10 top-2 text-slate-700 fa-beat"></i>
     </label>
     <hr>
     <table class="text-xl table-fixed test">
