Added styling to index and show pages of categories

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,12 +26,16 @@
     width: 100%; 
   }
   
-  tbody {
+  tbody, body{
     display: block; 
     max-height: 258px; 
     overflow-y: scroll; 
+    scroll:smooth;
   }
   tbody::-webkit-scrollbar {
+    display: none;
+  }
+  body::-webkit-scrollbar {
     display: none;
   }
   th, td {
