--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,24 +1,29 @@
-<div id="<%= dom_id category %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Title:</strong>
-    <%= category.title %>
+<div id="<%= dom_id category %>" class="border-2 m-4 w-90 min-w-90 p-8 h-90 min-h-90 rounded-xl relative drop-shadow-sm">
+  
+  <p >
+    <strong class="block font-medium mb-1 text-2xl"><%= category.title %></strong>
   </p>
 
   <p class="my-5">
-    <strong class="block font-medium mb-1">Body:</strong>
+    <%= "Has a total of #{category.tasks.count} tasks with #{category.tasks.where(status: ["Not started"]).count} pending, #{category.tasks.where(status: ["In progress"]).count} in progress and #{category.tasks.where(status: ["Completed"]).count} successfully completed." %>
+  </p>
+
+  <p class="my-5">
+    <strong class="block font-medium mb-1">Details: (Optional) </strong>
     <%= category.body %>
   </p>
 
-
   <% if action_name != "show" %>
-    <%= link_to "Show this category", category, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline">
-      <%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium"  %>
+    <div class="absolute -bottom-14 left-0 w-full border rounded-2xl flex justify-center">
+      <%= link_to category, class: "rounded-lg  inline-block font-medium mx-8 p-2 px-2 text-2xl text-sky-500 hover:bg-sky-50 transition transform hover:animate-[wiggle_.3s_ease-in-out_infinite] motion-reduce:transition-none motion-reduce:hover:transform-none" do%>
+        <i class="fa-solid fa-maximize"></i>
+      <% end %>
+      <%= link_to edit_category_path(category), class: "rounded-lg ml-2 inline-block font-medium mx-8 p-2 px-2 text-2xl text-green-500 hover:bg-green-50 transition transform hover:animate-[pulse_.3s_ease-in-out_infinite] motion-reduce:transition-none motion-reduce:hover:transform-none" do%>
+        <i class="fa-solid fa-pen-to-square"></i>
+      <% end %>
+      <%= link_to  category, method: :delete, data: { confirm: 'Are you sure?' }, class: "ml-2 rounded-lg inline-block font-medium mx-8 p-2 px-2 text-2xl text-red-500 hover:bg-red-50 transition transform hover:animate-[wiggle_.3s_ease-in-out_infinite] motion-reduce:transition-none motion-reduce:hover:transform-none" do %>
+        <i class="fa-solid fa-trash-can"></i>
+      <% end %>
     </div>
-    <%= link_to 'Edit this category', edit_category_path(category), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to new_task_path do %>
-      <i class="fa-solid fa-circle-plus fa-beat text-black text-2xl"></i>
-    <% end %>
-    <hr class="mt-6">
   <% end %>
 </div>
