--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id category %>" class="border-2 m-4 w-90 min-w-90 p-8 h-90 min-h-90 rounded-xl relative drop-shadow-sm">
+<div id="<%= dom_id category %>" class="border-2 m-4 w-90 min-w-90 p-8 h-90 min-h-90 rounded-xl relative drop-shadow-sm text-xl">
   
   <p >
     <strong class="block font-medium mb-1 text-2xl"><%= category.title %></strong>
