--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -15,7 +15,7 @@
     <%= form.text_field :title, class: "input", placeholder: "Category name" %>
   </div>
   <div class="field">
-    <%= form.text_area :body, class: "input", placeholder: "Details (Optional)"  %>
+    <%= form.text_area :body, class: "input h-20", placeholder: "Details (Optional)", id: "text_area"  %>
   </div>
   <div class="flex justify-evenly">
     <div class="inline">
