--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,4 @@
-<div  class="container mx-auto border-2 m-4 w-120 min-w-90 p-8 h-120 min-h-90 rounded-xl relative drop-shadow-sm text-xl">
+<div  class="container mx-auto border-2 m-4 w-120 min-w-90 p-8 h-120 min-h-90 rounded-xl relative drop-shadow-sm text-2xl">
   
   <p >
     <strong class="block font-medium mb-1 text-2xl"><%= @category.title %></strong>
