--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -126,7 +126,7 @@
     <label class="text-center bg-slate-100 h-12 pt-1 rounded-tr-lg rounded-tl-lg">
       <i class="fa-solid fa-map-pin absolute left-10 top-0 text-amber-500"></i> 
         <span class="text-xl p-2 absolute left-44">
-          <%= @tasks_overdue.count %>
+          <%= @tasks_undated.count %>
           /
           <%= @tasks_count %>
         </span>
