--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,3 +1,4 @@
+<div class="container mx-auto border-2 border-red-700 text-xl w-3/12 bg-red-100 p-4 rounded-2xl">
 <% if resource.errors.any? %>
   <div id="error_explanation">
     <h2>
@@ -13,3 +14,4 @@
     </ul>
   </div>
 <% end %>
+</div>
