--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
-<header class="w-full h-16 fixed top-0 left-0 bg-black">
+<header class="w-full h-16 fixed top-0 left-0 bg-black z-10">
     <div class="flex flex-row w-full">
         <%= image_tag "sensetasklogo.png", class: "sensetask_logo h-14 m-auto ml-28"%>
-        <nav class="flex justify-self-end items-center w-full h-16 justify-end text-white">
+        <nav class="flex justify-self-end items-center w-full h-16 justify-end text-white ">
             <ul class="flex flex-row content-center w-4/6 justify-evenly text-xl text-red">
             <li class="a-links"> <%= link_to "Home", root_path, class: "text-white" %></li>
             <li> <%= link_to "Categories", categories_path, class:"text-white" %></li>
@@ -11,13 +11,21 @@
                 <% if account_signed_in? %>
                     <div class="flex justify-evenly">
                         <p class="text-lg text-white"><strong><%= current_account.email %></strong></p>
-                        <%= link_to 'Edit profile', edit_account_registration_path %> |
-                        <%= link_to "Logout", destroy_account_session_path, method: :delete %>
+                        <%= link_to  edit_account_registration_path do %>
+                            <i class="fa-solid fa-user-gear"></i>
+                        <% end %> 
+                        <%= link_to  destroy_account_session_path, method: :delete do %>
+                            <i class="fa-solid fa-right-from-bracket"></i>
+                        <% end %>
                     </div>
                 <% else %>
                     <div class="flex justify-evenly w-3/6 ml-64">
-                        <%= link_to "Sign up", new_account_registration_path  %> |
-                        <%= link_to "Login", new_account_session_path %>
+                        <%= link_to new_account_registration_path do %>
+                            <i class="fa-solid fa-user-plus"></i>
+                        <% end %> 
+                        <%= link_to  new_account_session_path do %>
+                            <i class="fa-solid fa-right-to-bracket"></i>
+                        <% end %>
                     </div>
                 <% end %>
 
